# grid-world-plus

./: .gitignore  LICENSE  README.md  dql.py  exp0_masked.ipynb  exp0_masked_nb.py  flQ_graph.py  frozen_lake_Q.py  networkx_debug.py  pg.py  representations.py  test.py  test1.py  tools.py  value_prop_associative.py
.github/workflows/: pytest.yml
custom_env/: agent.py  attention.py  environment.py  pathfinder.py  pathmaker.py  test_environment.py  variable_frozen_lake.py
custom_env/email/: email.aux  email.tex
erik/: frozen_lake_Q.py  lab1_problem1.ipynb  tools.py
experiments/: __init__.py  exp0_masked_nb.py  vpg_experiments.py
grid-world-plus/: pyproject.toml
grid-world-plus/grid_world_plus/: __init__.py  env.py  replay.py  representations.py  tools.py
grid-world-plus/grid_world_plus/rlm_env/: __init__.py  environment.py  representations.py
grid-world-plus/grid_world_plus/transformer/: __init__.py  attention.py
grid-world-plus/tests/: test_environment.py
models/: dql.py
models/DQN/: dqn.py  q_network.py  tools.py
models/a2c/: actor.py  tools.py
notes/: README.md  april_2021.md  data_prep.md  experiments-rl-memory.md
notes/email/: email.md
notes/report-builder-rl_memory/: bibliography.bib  main.tex  naacl2021.sty
rl-algos/: pyproject.toml
rl-algos/tests/: test_rl_algos.py  test_vpg.py
rl_memory/: __init__.py  actor.py  actor_cnn_attn.py  dql.py  memory.py  pg.py  replay.py  tools.py  vanilla_pg.py
rl_memory/custom_env/: __init__.py  agents.py  environment.py  memory.py  representations.py  test_environment.py
rl_memory/erik/: run.py  (+10 more)
(+54 files in other folders)
